--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.300.0",
+    "@aws-sdk/util-dynamodb": "^3.300.0",
     "aws-sdk": "^2.1340.0",
     "axios": "^1.3.4",
+    "bcrypt": "^5.1.0",
     "nodemailer": "^6.9.1"
   }
 }
