--- a/serverless.yml
+++ b/serverless.yml
@@ -8,22 +8,21 @@ provider:
     role:
       statements:
         - Effect: "Allow"
-          Resource: "*"
-          Action: "lambda:InvokeFunction"
-        - Effect: "Allow"
-          Action: "dynamodb:*"
+          Action:
+            - "lambda:InvokeFunction"
+            - "dynamodb:*"
           Resource: "*"
 
 functions:
   handlerGet:
     handler: index.handlerGet
-  handlerPut:
-    handler: index.handlerPut
   handlerUpdate:
     handler: index.handlerUpdate
+  handlerPut:
+    handler: index.handlerPut
     events:
-      -stream:
-        type: dynamodb
-        arn: arn:aws:dynamodb:us-east-1:746204573428:table/UserID/stream/2023-03-28T03:58:51.308
-        batchSize: 10
-        startingPosition: Latest
+      - stream:
+          type: dynamodb
+          arn: arn:aws:dynamodb:us-east-1:746204573428:table/UserID/stream/2023-03-28T03:58:51.308
+          batchSize: 10
+          startingPosition: LATEST
