--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.1340.0",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "nodemailer": "^6.9.1"
   }
 }
