--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.300.0",
+    "@aws-sdk/client-s3": "^3.304.0",
+    "@aws-sdk/s3-request-presigner": "^3.304.0",
     "@aws-sdk/util-dynamodb": "^3.300.0",
     "aws-sdk": "^2.1340.0",
     "axios": "^1.3.4",
